# RustBot

./: .gitignore  Cargo.toml
configs/: api_request.json
src/: main.rs
src/api/: mod.rs
src/bot/: mod.rs
src/bot/telegram/: mod.rs
src/bot/telegram_bot/: mod.rs
src/bot/telegram_user/: mod.rs
src/bot/whatsapp/: mod.rs
src/libs/grammers-client/examples/: dialogs.rs
src/libs/grammers-client/src/client/: chats.rs  files.rs  updates.rs
src/libs/grammers-client/src/types/: message.rs
src/libs/grammers-crypto/src/: two_factor_auth.rs
src/libs/grammers-mtproto/src/mtp/: encrypted.rs
src/libs/grammers-mtsender/src/: lib.rs
src/libs/grammers-session/src/message_box/: mod.rs
src/structs/: api.rs  auth.rs  mod.rs  wrapper.rs
src/tests/: mod.rs
src/utils/: mod.rs
src/wrapper/: wrapper.rs
