[package]
name = "doca_tg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }

grammers-client = { path = "src/libs/grammers-client", version = "0.5.0" }
grammers-crypto = { path = "src/libs/grammers-crypto", version = "0.6.0" }
grammers-mtproto = { path = "src/libs/grammers-mtproto", version = "0.5.0" }
grammers-mtsender = { path = "src/libs/grammers-mtsender", version = "0.5.0" }
grammers-session = { path = "src/libs/grammers-session", version = "0.5.1" }
grammers-tl-types = { path = "src/libs/grammers-tl-types", version =  "0.5.1", features = [
    "tl-mtproto",
] }

reqwest = { version = "0.12.3", features = ["json", "default"] }
actix-web = "4.5.1"
actix-rt = { version = "2.9.0", features = ["tokio-uring"] }

tokio = { version = "1.34.0", default-features = false, features = ["full"] }
url = { version = "2.4.1", optional = true }
html5ever = { version = "0.27.0", optional = true }
locate-locale = "0.2.0"
log = "0.4.20"
md5 = "0.7.0"
mime_guess = "2.0.4"
os_info = { version = "3.0.4", default_features = false }
chrono = "0.4.31"
futures-util = { version = "0.3.15", default_features = false, features = [
    "alloc"
] }
simple_logger = { version = "4.2.0", default-features = false, features = [
    "colors",
] }